Bug 349730 - Illegible text in ksnapshot webp image
Summary: Illegible text in ksnapshot webp image
Status: RESOLVED FIXED
Alias: None
Product: ksnapshot
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.8.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Aaron J. Seigo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-29 20:32 UTC by teancum144
Modified: 2016-09-05 19:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
.jpeg sample (47.76 KB, image/jpeg)
2015-06-29 20:33 UTC, teancum144
Details
.png sample (38.98 KB, image/png)
2015-06-29 20:34 UTC, teancum144
Details
.webp sample (7.71 KB, image/webp)
2015-06-29 20:35 UTC, teancum144
Details

Note You need to log in before you can comment on or make changes to this bug.
Description teancum144 2015-06-29 20:32:09 UTC
I took a snapshot of the same text three times using .jpeg, .png, and .webp. Only the .webp is illegible. I also reported this to the webp issue tracker and they referred me here. Here is a link to that bug report, which includes attached sample screenshots:
https://code.google.com/p/webp/issues/detail?id=252

I don't see a way to upload attachments as part of this bug report. 

Reproducible: Always

Steps to Reproduce:
1. Take a screenshot of text with ksnapshot in Fedora Linux
2. Select Save as
3. Select webp as the image type

Actual Results:  
Illegible text

Expected Results:  
legible text
Comment 1 teancum144 2015-06-29 20:33:20 UTC
Created attachment 93421 [details]
.jpeg sample
Comment 2 teancum144 2015-06-29 20:34:02 UTC
Created attachment 93422 [details]
.png sample
Comment 3 teancum144 2015-06-29 20:35:32 UTC
Created attachment 93423 [details]
.webp sample
Comment 4 Martin Koller 2016-09-05 19:05:21 UTC
Git commit bc38ac531e2965f81625490cbb8e2394f6b86188 by Martin Koller.
Committed on 05/09/2016 at 19:03.
Pushed by mkoller into branch 'Applications/16.08'.

Avoid quality being set to 0 and use default of 75

For some reason, set quality was called with -1, which was limited
to 0, the lowest quality.
Instead now, if a value < 0 is given, we still use the default of 75

M  +4    -2    kimgio/webp.cpp

http://commits.kde.org/kde-runtime/bc38ac531e2965f81625490cbb8e2394f6b86188