Avoid quality being set to 0 and use default of 75

For some reason, set quality was called with -1, which was limited
to 0, the lowest quality.
Instead now, if a value < 0 is given, we still use the default of 75

BUG: 349730